[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtf-fuz"
version = "0.1.0"
description = "A Python package that provides a GTF parser with fuzzy matching capabilities"
readme = "README.md"  # Ensure you have this file in your project directory
requires-python = ">=3.10"
authors = [
    {name = "Peter Newstein", email = "peternewstein@gmail.com"}
]

dependencies = [
    "gtfparse",
    "fuzzywuzzy",
    "click",
    "numpy"
]

[project.scripts]
gtf-fuz = "gtf_fuz:main"

[project.urls]
repository = "https://github.com/pnewstein/gtf-fuz.git"

